Sun Dec  8 13:01:11 2013  Aman Gupta <ruby@tmm1.net>

	* vm.c (ruby_vm_stat): add RubyVM.stat() for access to internal cache
	  counters. this methods behaves like GC.stat, accepting an optional
	  hash or symbol argument. [Bug #9190] [ruby-core:58750]
	* test/ruby/test_rubyvm.rb: test for new method

Sun Dec  8 11:59:40 2013  Aman Gupta <ruby@tmm1.net>

	* hash.c (rb_hash_replace): add a write barrier to fix GC mark miss on
	  hashes using Hash#replace [Bug #9226] [ruby-core:58948]

Sun Dec  8 11:21:00 2013  Aman Gupta <ruby@tmm1.net>

	* include/ruby/ruby.h: add RGENGC_WB_PROTECTED_NODE_CREF setting
	  In a large app, this reduces the size of
	  remembered_shady_object_count by 80%. [Bug #9225] [ruby-core:58947]
	* gc.c (rb_node_newnode): add FL_WB_PROTECTED flag to NODE_CREF
	* class.c (rewrite_cref_stack): insert OBJ_WRITE for NODE_CREF
	* iseq.c (set_relation): ditto
	* iseq.c (rb_iseq_clone): ditto
	* vm_eval.c (rb_yield_refine_block): ditto
	* vm_insnhelper.c (vm_cref_push): ditto
	* vm_insnhelper.h (COPY_CREF): ditto

Sun Dec  8 10:45:05 2013  Aman Gupta <ruby@tmm1.net>

	* hash.c (hash_aset_str): revert r43870 due to performance issue
	  [Bug #9188] [ruby-core:58730]
	* parse.y (assoc): convert literal string hash keys to fstrings
	* test/ruby/test_hash.rb (class TestHash): expand test

Sun Dec  8 10:22:38 2013  Aman Gupta <ruby@tmm1.net>

	* parse.y (register_symid_str): use fstrings in symbol table
	  [Bug #9171] [ruby-core:58656]
	* parse.y (rb_id2str): ditto
	* string.c (rb_fstring): create frozen_strings on first usage. this
	  allows rb_fstring() calls from the parser (before cString is created)
	* string.c (fstring_set_class_i): set klass on fstrings generated
	  before cString was defined
	* string.c (Init_String): convert frozen_strings table to String
	  objects after boot
	* ext/-test-/symbol/type.c (bug_sym_id2str): expose rb_id2str()
	* test/-ext-/symbol/test_type.rb (module Test_Symbol): verify symbol
	  table entries are fstrings
