@@ -1,3 +1,11 @@
+Sun Dec  8 13:59:38 2013  Kazuki Tsujimoto  <kazuki@callcc.net>
+
+	* array.c (rb_ary_shuffle_bang, rb_ary_sample): check
+	  unknown keywords.
+
+	* test/ruby/test_array.rb (test_shuffle, test_sample): tests for
+	  the above.
+
 Sun Dec  8 13:01:11 2013  Aman Gupta <ruby@tmm1.net>
 
 	* vm.c (ruby_vm_stat): add RubyVM.stat() for access to internal cache
